<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Edit.EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/check_name"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/check"
            tools:ignore="ContentDescription,RtlHardcoded" />


        <ImageView
            android:id="@+id/back_name"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aliasName"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/fNameAndLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/Name"
            android:maxLength="30"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="Autofill,TextFields"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:lineHeight="25dp"
            android:text="@string/policy_editName"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>