<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.fragment.ChatListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/Consulting"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="@string/URL_GET_JSON_Lottie_01" />

    <RelativeLayout
        android:id="@+id/relativeLayout_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_admin"
        android:padding="10dp">

        <ImageView
            android:id="@+id/fab"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back"
            tools:ignore="ContentDescription"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/fab"
            android:text="@string/lets_go_chat"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/fab" />

        <TextView
            android:id="@+id/aliasnameAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/framelayout"
            android:maxLength="15"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="EllipsizeMaxLines,RelativeOverlap"
            android:layout_toStartOf="@id/framelayout" />

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/admin_img"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <View
                android:id="@+id/online"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/online"
                android:visibility="invisible"
                android:layout_marginStart="2dp" />
        </FrameLayout>

    </RelativeLayout>


</LinearLayout>