<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            android:foreground="@drawable/selector_shape_profile_img"
            app:contentScrim="@color/blue"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/profile_loader"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/aliasname_cardview"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/aliasname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/EditProfile"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/favorite"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/add_photo"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        app:maxImageSize="40dp"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/upload"
        android:visibility="gone"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right"
        app:maxImageSize="30dp"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>